--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,4 +13,12 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
+<!--    <ImageView-->
+<!--        android:id="@+id/test"-->
+<!--        android:layout_width="400dp"-->
+<!--        android:layout_height="400dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
