--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -9,5 +9,20 @@
         android:id="@+id/homeFragment"
         android:name="com.example.testdeveloperproject.features.home.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/actionOpenDetailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.example.testdeveloperproject.features.detail.DetailFragment"
+        android:label="DetailFragment"
+        tools:layout="@layout/fragment_detail">
+
+        />
+        <argument
+            android:name="listGifs"
+            app:argType="com.example.testdeveloperproject.common.body.GifsBody" />
+    </fragment>
 </navigation>
